--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
                     <div class="boxes">5</div>
                 </div>
             </div>
-            <div id="mainplayarea"></div>
+            <div id="mainplayarea">
+            </div>
         </div>
-        
-
         </div>
     </div>
+    <div id="bulb">
+        <button>Click Me!</button>
+    </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
