Complete bubble game

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <div id="playarea">
             <div id="nav">
                 <div class="track">
-                    <h2>Scores</h2>
-                    <div class="boxes">5</div>
+                    <h2>Hit</h2>
+                    <div id="hitval" class="boxes">0</div>
+                </div>
+                <div class="track">
+                    <h2>Timer</h2>
+                    <div id="timevalue" class="boxes">60</div>
                 </div>
                 <div class="track">
                     <h2>Scores</h2>
-                    <div class="boxes">5</div>
-                </div>
-                <div class="track">
-                    <h2>Scores</h2>
-                    <div class="boxes">5</div>
+                    <div id="scoreval" class="boxes">0</div>
                 </div>
             </div>
             <div id="mainplayarea">
